# cobrar

./: .Rbuildignore  .Rhistory  .gitignore  .lintr  404.html  DESCRIPTION  LICENSE.html  NAMESPACE  README.Rmd  README.md  README_WIN.Rmd  README_WIN.html  README_WIN.md  _pkgdown.yml  authors.html  authors.md  configure  configure.ac  configure.win  configure~  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  coverage.yaml  lint.yaml  pkgdown.yaml
R/: ConstraintsClass.R  FluxPredictionClass.R  LPproblemClass.R  LPproblem_glpkClass.R  ModelCommClass.R  ModelOrgClass.R  ModelorgClass.R  RcppExports.R  annotation.R  checkId.R  checkReactId.R  chemoinformatics.R  cobrar.R  deadEndMetabolites.R  fba.R  findExchReact.R  fixBMRatios.R  fluxBMCoupling.R  fluxdist_analysis.R  frog.R  fva.R  geneDel.R  guessBMReaction.R  import.R  io.R  joinModels.R  model_modifications.R  p_fba.R  parseBoolean.R  pfba.R  pfba_heuristic.R  printReaction.R  printers.R  sbml_io.R
articles/: 1_FVA.html  2_additional_constraints.html  3_Community-models.html  Additional_constraints.html  Additional_constraints.md  Community-models.html  Community_models.html  Community_models.md  FVA.html  FVA.md  additional_constraints.html  cobrar.html  cobrar.md  index.html  index.md
inst/extdata/: e_coli_core.xml  elements.tsv  iNP636_Coleaginosus_ATCC20509_mod_names_V2.xml
inst/schema/: frog_schema_0.1.json
man/: COBRAR_SETTINGS.Rd  Constraints-class.Rd  FluxPrediction-class.Rd  LPproblem-class.Rd  LPproblem_glpk-class.Rd  ModelComm-class.Rd  ModelOrg-class.Rd  UserConstraints-class.Rd  addCols-methods.Rd  addCompartment.Rd  addConstraint-methods.Rd  addConstraint.Rd  addGene.Rd  addMetabolite.Rd  addReact.Rd  addRows-methods.Rd  addSingleConstraint-methods.Rd  addSubsystem.Rd  changeBounds.Rd  changeObjFunc.Rd  checkCompartmentId.Rd  checkGeneId.Rd  checkMetId.Rd  checkReactId.Rd  checkSubsystemId.Rd  comp_num-methods.Rd  comp_num.Rd  comp_pos-methods.Rd  comp_pos.Rd  constraint_num-methods.Rd  constraint_num.Rd  countElements.Rd  deadEndMetabolites.Rd  deleteLP-methods.Rd  elements.Rd  fba.Rd  findExchReact-methods.Rd  findExchReact.Rd  fixBMRatios.Rd  fluxBMCoupling.Rd  (+55 more)
reference/: COBRAR_SETTINGS.html  COBRAR_SETTINGS.md  Constraints-class.html  Constraints-class.md  Constraints.html  FluxPrediction-class.html  FluxPrediction-class.md  FluxPrediction.html  LPproblem-class.html  LPproblem-class.md  LPproblem.html  LPproblem_glpk-class.html  LPproblem_glpk-class.md  ModelComm-class.html  ModelComm-class.md  ModelComm.html  ModelOrg-class.html  ModelOrg-class.md  ModelOrg.html  addCols,LPproblem_glpk.html  addCols-methods.html  addCols-methods.md  addCompartment.html  addCompartment.md  addConstraint,ModelOrg,character,numeric,character-method.html  addConstraint-methods.html  addConstraint-methods.md  addGene.html  addGene.md  addMetabolite.html  addMetabolite.md  addReact.html  addReact.md  addRows,LPproblem_glpk-method.html  addRows-methods.html  addRows-methods.md  addSingleConstraint,LPproblem_glpk.html  addSingleConstraint-methods.html  addSingleConstraint-methods.md  addSubsystem.html  (+156 more)
src/: GLPK.cpp  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  SBML.cpp  config.h.in  readSBML.cpp
tests/: .gitignore  testthat.R
tests/testthat/: helper-models.R  test-dead-end.R  test-fba-pfba.R  test-frog.R  test-io.R
vignettes/: Community-models.Rmd  Community_models.Rmd  FVA.Rmd  additional_constraints.Rmd  cobrar.Rmd  frog_analysis.Rmd
